# ZIrcon-LoongArch

./: .README.md.kate-swp  Makefile  README.md  runtime.json
kernel/: BUILD.gn  params.gni
kernel/arch/arm64/: start.S
kernel/arch/loongarch64/: BUILD.gn  arch.cc  asm.S  boot-mmu.cc  cache-ops.S  debug.cc  debugger.cc  exceptions.S  exceptions_c.cc  feature.cc  image.S  mexec.S  mmu.cc  mp.cc  periphmap.cc  spinlock.cc  start.S  thread.cc  trap.cc  user_copy.S  user_copy_c.cc  uspace_entry.S
kernel/arch/loongarch64/hypervisor/: BUILD.gn  guest.cc  vcpu.cc
kernel/arch/loongarch64/include/arch/: arch_ops.h  arch_thread.h  asm_macros.h  aspace.h  current_thread.h  defines.h  hypervisor.h  loongarch64.h  spinlock.h
kernel/arch/loongarch64/include/arch/loongarch64/: csr.h  debug.h  exceptions.h  feature.h  iframe.h  interrupt.h  intrinsics.h  mmu.h  mp.h  user_copy.h
kernel/dev/interrupt/extioi_pic/: BUILD.gn  extioi_pic.cc
kernel/dev/timer/loongarch_generic/: BUILD.gn  loongarch_generic_timer.cc
kernel/dev/timer/loongarch_generic/include/dev/timer/: loongarch_generic.h
kernel/dev/uart/dw8250/: uart.cc
kernel/hypervisor/: hypervisor_unittest.cc
kernel/hypervisor/include/hypervisor/: interrupt_tracker.h
kernel/include/: arch.h
kernel/include/sys/: types.h
kernel/lib/crashlog/: crashlog.cc
kernel/lib/crashlog/include/lib/: crashlog.h
kernel/lib/libc/string/arch/loongarch64/: BUILD.gn
kernel/lib/userabi/: gen-rodso-code.sh  vdso.cc
kernel/platform/generic-arm/: platform.cc
kernel/platform/generic-loongarch/: BUILD.gn  interrupt.h  interrupts.cc  platform.cc  timer.cc
public/gn/config/: BUILD.gn  rodso.ld  standard.gni
public/gn/toolchain/: c_toolchain.gni  c_utils.gni  gcc.gni
scripts/: run-zircon  run-zircon-loongarch64
system/core/devmgr/devcoordinator/: coordinator.cc  main.cc
system/core/devmgr/devhost/: BUILD.gn
system/core/devmgr/shared/: fdio.cc
system/core/netsvc/: debug-command-enabled.cc
system/dev/board/qemu/: BUILD.gn
system/dev/misc/cpu-trace/: loongarch64-pm-impl.h  perf-mon.h
system/dev/usb/mt-musb-host/: usb-root-hub.h
system/dev/usb/xhci/: xdc.cc
system/public/zircon/: assert.h  features.h  tls.h
system/public/zircon/boot/: driver-config.h  image.h
system/public/zircon/hw/usb/: hub.h
system/public/zircon/syscalls/: debug.h  exception.h  port.h
system/ulib/c/setjmp/loongarch64/: longjmp.S  setjmp.S
system/ulib/ddk/include/hw/: arch_ops.h  reg.h
system/ulib/devmgr-launcher/: launcher.cc
system/ulib/elf-psabi/include/lib/elf-psabi/: sp.h
system/ulib/elf-search/include/: elf-search.h
system/ulib/elfload/: elf-load.c
system/ulib/fdio/include/lib/fdio/: spawn.h
system/ulib/hermetic-compute/: launch.cc
system/ulib/hermetic-compute/include/lib/hermetic-compute/: hermetic-data.h  hermetic-engine.h
system/ulib/inspector/: debug-info.cc  registers.cc
system/ulib/inspector/include/inspector/: inspector.h
system/ulib/libzbi/: zbi.c
system/ulib/libzbi/test/: zbi.cc
system/ulib/paver/: device-partitioner.h  paver.cc
system/ulib/runtime/include/runtime/: tls.h
system/ulib/sync/include/lib/sync/internal/: condition-template.h
system/ulib/xdc-server-utils/include/xdc-server-utils/: msg.h
system/ulib/zircon/: BUILD.gn  syscalls-loongarch64.S  zircon-syscall-loongarch64.S  zx_cache_flush.cc  zx_futex_wake_handle_close_thread_exit-loongarch64.S  zx_ticks_get.cc  zx_vmar_unmap_handle_close_thread_exit-loongarch64.S
system/ulib/zircon-internal/include/lib/zircon-internal/device/cpu-trace/: loongarch64-pm.h
tools/abigen/: abigen_generator.cc
tools/zbi/: zbi.cc
