# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("$zx/kernel/params.gni")

source_set("generic-loongarch") {
  sources = [
    "platform.cc",
    "timer.cc"
  ]
  deps = [
    "$zx/kernel/lib/console",
  ]
}
