# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("$zx/kernel/params.gni")

source_set("generic-loongarch") {
  sources = [
    "interrupts.cc",
    "platform.cc",
  ]
  deps = [
    "$zx/kernel/dev/hw_rng",
    "$zx/kernel/dev/interrupt",
    "$zx/kernel/dev/pdev",
    "$zx/kernel/dev/timer/loongarch_generic",
    "$zx/kernel/dev/uart/dw8250",
    "$zx/kernel/lib/console",
    "$zx/kernel/lib/debuglog",
    "$zx/kernel/lib/fbl",
    "$zx/kernel/lib/memory_limit",
    "$zx/kernel/lib/topology",
    "$zx/kernel/object",
    "$zx/system/ulib/libzbi",
  ]
}
